<resources>
    <string name="app_name">Slowr</string>
    <string name="facebook_app_id">3156159024478062</string>
    <string name="title_facebook_fragment">Facebook</string>
    <string name="title_google_fragment">Google+</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_fb">Sign in with Facebook</string>
    <string name="sign_in_with_twitter">Sign in with Twitter</string>
    <string name="sign_in_with_linked_in">Sign in with LinkedIn</string>
    <string name="enter_your_name">Your Name*</string>
    <string name="enter_your_phone_no">Mobile Number*</string>
    <string name="enter_your_phone_no_email">Mobile Number / Email</string>
    <string name="enter_your_phone_no_email_content">Enter Email</string>
    <string name="enter_your_email">E-mail ID</string>
    <string name="enter_your_email_man">E-mail ID*</string>
    <string name="enter_your_password">Password</string>
    <string name="old_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="enter_your_password_star">Password*</string>
    <string name="enter_your_confirm_password">Re-type password</string>
    <string name="new_password_retype">Re-type New Password</string>
    <string name="enter_your_confirm_password_star">Re-type password*</string>
    <string name="txt_signup">Register</string>
    <string name="txt_sigin">Login</string>
    <string name="txt_log_out">Logout</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="re_send_otp">Re-send OTP</string>
    <string name="request_otp">Request OTP</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="login_with_password">Login with Password</string>
    <string name="login_with_otp">Login with OTP</string>
    <string name="or_login_with">Login with</string>
    <string name="txt_new">New?</string>
    <string name="already_an_account">Already an user?</string>
    <string name="register_here">Register here</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="txt_continue">Continue</string>
    <string name="txt_tc_register">By Registering, you agree to Slowr\'s</string>
    <string name="txt_and">and</string>
    <string name="txt_tc">T&amp;C</string>
    <string name="txt_verification">Verification</string>
    <string name="txt_enter_otp">ENTER OTP</string>
    <string name="txt_otp_content">Please enter the 4-digit OTP sent to your mobile number</string>
    <string name="txt_otp_content_email">Please enter the 4-digit OTP sent to your email</string>
    <string name="txt_email_content">Please enter the registered E-mail ID or Mobile Number</string>
    <string name="password_retype_password_alert">Password and Re-type password should be the same</string>
    <string name="password_empty_alert">Password should contain atleast 6 characters</string>
    <string name="old_password_required">Enter the Current Password</string>
    <string name="password_required">Enter the New Password</string>
    <string name="confirm_password_required">Enter the Re-type Password</string>
    <string name="password_new_retype_same">New Password and Re-type New password should be same</string>
    <string name="txt_profile">My Profile</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="enter_name_minimum">Enter Minimum 3 Character</string>
    <string name="enter_phone_number">Enter Mobile Number</string>
    <string name="enter_valid_phone_number">Enter Valid Mobile Number</string>
    <string name="enter_email">Enter Valid Email ID</string>
    <string name="enter_password">Enter the Password</string>
    <string name="enter_retype_password">Enter Re-type Password</string>
    <string name="enter_details_incorrect">Entered details are incorrect</string>
    <string name="enter_your_input">Enter Your Inputs</string>
    <string name="txt_send_otp">Send OTP</string>
    <string name="title_forgot_password">Forgot password</string>
    <string name="title_new_password">New password</string>
    <string name="title_change_password">Change password</string>
    <string name="txt_add_post">Post Ad</string>
    <string name="txt_update_post">Update Ad</string>
    <string name="txt_select">Select</string>
    <string name="txt_type">Type</string>
    <string name="txt_category">Category</string>
    <string name="txt_sub_category">Sub category</string>
    <string name="txt_product_type">Product Type *</string>
    <string name="txt_product_type_select">Product Category</string>
    <string name="txt_profession">Profession *</string>
    <string name="txt_profession_select">Profession</string>
    <string name="txt_city">City *</string>
    <string name="txt_city_select">City</string>
    <string name="txt_locality">Locality *</string>
    <string name="txt_locality_select">Locality</string>
    <string name="txt_select_city">Select City</string>
    <string name="txt_rental_duration_select">Select Rental Duration</string>
    <string name="txt_hiring_duration_select">Select Hiring Pattern</string>
    <string name="txt_select_locality">Type Locality</string>
    <string name="txt_select_product">Type Product Category</string>
    <string name="txt_select_profession">Type Profession</string>
    <string name="txt_rental_duration">Rental Duration *</string>
    <string name="txt_rental_fee">Rental Fee *</string>
    <string name="txt_input_price_product">₹ Enter Rental Fee</string>
    <string name="txt_input_price_service">₹ Enter Hiring Fee</string>
    <string name="txt_negotiate">Fixed charges</string>
    <string name="txt_show_number">Don’t show my mobile number on Ad</string>
    <string name="txt_upload_image_product">Upload Product Images (max 5 images). \nThe first image is the AD profile pic.</string>
    <string name="txt_upload_image_service">Upload Product Images (max 5 images). \nThe first image is the User profile pic.</string>
    <string name="post_ad">Post Ad</string>
    <string name="preview_ad">Preview Ad</string>
    <string name="title_content">Your Ad title (Autogenerated)</string>
    <string name="txt_product">Product</string>
    <string name="txt_product_category">Product Categories</string>
    <string name="txt_service">Service</string>
    <string name="txt_service_category">Service Categories</string>
    <string name="txt_hiring_pattern">Hiring Pattern *</string>
    <string name="txt_hiring_fee">Hiring Fee *</string>
    <string name="txt_des_count">%1$s/200</string>
    <string name="txt_pro_count">%1$s/50</string>
    <string name="select_product_type">Select Product Type</string>
    <string name="select_profession">Select Profession</string>
    <string name="enter_fee">Enter fee</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_valid_mobile_number">Enter a valid Mobile Number</string>
    <string name="txt_ad_post_content">By continuing you accept the</string>
    <string name="txt_ad_post_tc">Terms &amp; Conditions</string>
    <string name="accept_tc">Accept Terms &amp; Conditions to continue</string>
    <string name="select_city">Select City to continue</string>
    <string name="enter_rental_fee">Enter Rental Fee</string>
    <string name="enter_hiring_fee">Enter Hiring Fee</string>
    <string-array name="price_array">
        <item>Per Day</item>
        <item>Per Hour</item>
        <item>Ask Price</item>
    </string-array>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="click_again">If you want to exit, please click BACK again to exit</string>
    <string name="nav_dash_board">My Ads</string>
    <string name="nav_home">Home</string>
    <string name="nav_privacy_policy">Privacy Policy</string>
    <string name="nav_terms_conditions">Terms &amp; Conditions</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_report_us">Report Us</string>
    <string name="nav_logout">Log out</string>
    <string name="nav_my_favorite">My Favorites</string>
    <string name="nav_notification">My Notifications</string>
    <string name="nav_my_chat">My Chat</string>
    <string name="prosper_id">Prosper ID</string>
    <string name="txt_chat_now">Chat now</string>
    <string name="txt_description">Description</string>
    <string name="txt_view_profile">View Profile</string>
    <string name="txt_more">More...</string>
    <string name="txt_related_ads">Related Ads</string>
    <string name="txt_guid_lines">Guidelines</string>
    <string name="txt_prosper_id">Prosper ID</string>
    <string name="txt_guid_lines_content">\u2022 Lorem ipsum dolor sit amet, consetetur.\n\u2022 Lorem ipsum dolor sit amet, consetetur.\n\u2022 Lorem ipsum dolor sit amet, consetetur.</string>
    <string name="txt_sort_by">Sort by</string>
    <string name="txt_filter">Filter</string>
    <string name="name_digits">AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz .1234567890</string>
    <string name="edit_ad">Edit Ad</string>
    <string name="boost_ad">Boost Ad</string>
    <string name="delete_ad">Delete Ad</string>
    <string name="txt_done">Done</string>
    <string name="txt_apply">Apply</string>
    <string name="txt_clear">Clear</string>
    <string name="txt_edit">Edit</string>
    <string name="profile_verification">Profile Verification</string>
    <string name="fancy_prosper_id">Fancy Prosper ID</string>
    <string name="about_slowr">About Slowr</string>
    <string name="about_sample">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="promote_sample">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="slowr_link">www.slowr.in</string>
    <string name="txt_search">Search</string>
    <string name="txt_for">for</string>
    <string name="txt_hiring">Hiring</string>
    <string name="transaction_history">Invoices</string>
    <string name="txt_individual">Individual</string>
    <string name="txt_corporate">Corporate</string>
    <string name="txt_verify">Verify</string>
    <string name="txt_cancel">Cancel</string>
    <string name="company_name">Company Name</string>
    <string name="gst_no">GSTIN</string>
    <string name="name_in_adhaar">Name as per Aadhaar</string>
    <string name="adhaar_no">Aadhaar Number</string>
    <string name="txt_congrats">Congrats</string>
    <string name="txt_profile_content_one">Your profile is now</string>
    <string name="txt_profile_content_verified">VERIFIED</string>
    <string name="txt_profile_content_two">Click below to view your profile</string>
</resources>