<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/size_five">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size_twenty"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/title_forgot_password"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/size_twenty_six" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_twenty_five"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/txt_email_content"
        android:textColor="@color/color_black"
        android:textSize="@dimen/size_twelve" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunito_regular"
        android:hint="@string/enter_your_phone_no_email"
        android:textColorHint="@color/color_black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_regular"
            android:importantForAutofill="auto"
            android:inputType="textEmailAddress"
            android:textColor="@color/color_black"
            android:textSize="@dimen/size_fifteen"
            app:hintTextColor="@color/color_black" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_send_mail"
        style="@style/LoginButtonStyle"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size_twenty"
        android:text="@string/txt_send_otp" />

</LinearLayout>
