<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_gray"
    android:gravity="center"
    android:padding="20dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/color_white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_otp"
                style="@style/LoginEditBoxStyle"
                android:layout_marginTop="@dimen/size_ten"
                android:hint="@string/enter_otp"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_twenty"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_sent_otp"
                    style="@style/LoginButtonStyle"
                    android:layout_weight="1"
                    android:text="@string/re_send_otp" />

                <View
                    android:layout_width="20dp"
                    android:layout_height="10dp" />

                <Button
                    android:id="@+id/btn_verify_otp"
                    style="@style/LoginButtonStyle"
                    android:layout_weight="1"
                    android:text="@string/verify_otp" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
