<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/size_five">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size_twenty"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/title_new_password"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/size_twenty_six" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_your_password"
        android:textColorHint="@color/color_black"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_regular"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textColor="@color/color_black"
            android:textSize="@dimen/size_fifteen"
            app:hintTextColor="@color/color_black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_forgot_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_your_confirm_password"
        android:textColorHint="@color/color_black"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_change_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_regular"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textColor="@color/color_black"
            android:textSize="@dimen/size_fifteen"
            app:hintTextColor="@color/color_black" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_send_password"
        style="@style/LoginButtonStyle"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size_twenty"
        android:layout_marginBottom="@dimen/size_twenty"
        android:text="@string/txt_continue" />


</LinearLayout>
