<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.VerificationActivity">

    <include layout="@layout/layout_header" />

    <LinearLayout
        android:id="@+id/layout_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/size_twenty"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/layout_selection_button"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/bg_orenge_border"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_individual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_left_orenge"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/txt_individual"
                android:textAllCaps="false"
                android:textColor="@color/color_white"
                android:textSize="@dimen/size_fifteen" />

            <Button
                android:id="@+id/btn_corporate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_orenge_border_right"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/txt_corporate"
                android:textAllCaps="false"
                android:textColor="@color/txt_orange"
                android:textSize="@dimen/size_fifteen" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_input_individual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_ten"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_adhaar_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/name_in_adhaar"
                android:textColorHint="@color/color_black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_aadhaar_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_regular"
                    android:inputType="text|none"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/size_fifteen"
                    app:hintTextColor="@color/color_black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_adhaar_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/adhaar_no"
                android:textColorHint="@color/color_black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_aadhaar_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_regular"
                    android:inputType="number"
                    android:maxLength="12"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/size_fifteen"
                    app:hintTextColor="@color/color_black" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_input_corporate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_ten"
            android:orientation="vertical"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/company_name"
                android:textColorHint="@color/color_black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_company_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_regular"
                    android:inputType="text"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/size_fifteen"
                    app:hintTextColor="@color/color_black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_gst_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/gst_no"
                android:textColorHint="@color/color_black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_gst_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_regular"
                    android:inputType="text"
                    android:maxLength="15"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/size_fifteen"
                    app:hintTextColor="@color/color_black" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_thirdy"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_verify"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/bg_green_view"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/txt_verify"
                android:textAllCaps="false"
                android:textColor="@color/color_white"
                android:textSize="@dimen/size_sixteen" />

            <View
                android:layout_width="@dimen/size_forty"
                android:layout_height="1dp" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/bg_orenge"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/txt_cancel"
                android:textAllCaps="false"
                android:textColor="@color/color_white"
                android:textSize="@dimen/size_sixteen" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_success"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_twenty"
            app:cardBackgroundColor="@color/color_white"
            app:cardCornerRadius="@dimen/size_ten">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/size_twenty">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/txt_congrats"
                    android:textAllCaps="true"
                    android:textColor="@color/bg_green"
                    android:textSize="@dimen/size_forty" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_ten"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_regular"
                        android:text="@string/txt_profile_content_one"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/size_eighteen" />

                    <View
                        android:layout_width="@dimen/size_five"
                        android:layout_height="1dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_regular"
                        android:text="@string/txt_profile_content_verified"
                        android:textColor="@color/bg_green"
                        android:textSize="@dimen/size_eighteen" />
                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_ten"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/txt_profile_content_two"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/size_eighteen" />

                <Button
                    android:id="@+id/btn_home_page"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_marginTop="@dimen/size_twenty"
                    android:background="@drawable/bg_orenge"
                    android:fontFamily="@font/nunito_regular"
                    android:gravity="center"
                    android:paddingLeft="@dimen/size_twenty"
                    android:paddingRight="@dimen/size_twenty"
                    android:text="@string/txt_profile"
                    android:textAllCaps="false"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/size_thirteen" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>